switch to Mapsforge map provider if Google Play services are too old for Google Maps (fix #7975)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -283,6 +283,10 @@
     <string name="err_request_popup_info">c:geo failed to get cache popup info.</string>
     <string name="warn_log_load_additional_data">c:geo failed to load additional data (trackables/favorite points) for logging.</string>
 
+    <string name="warn_gm_not_available">Google Maps not available.</string>
+    <string name="switch_to_mf">Your Google Play Service is outdated. Do you want to switch to Mapsforge map provider instead?</string>
+    <string name="switched_to_mf">Default map switched to Mapsforge map provider. Restart your map now.</string>
+
     <!-- location service -->
     <string name="loc_last">Last known</string>
     <string name="loc_net">Network</string>
